---------------------------------------------------------------------------------------------------
Version: 1.0.16
Date: 1/7/25
---------------------------------------------------------------------------------------------------
Version: 1.0.15
Date: 1/7/25
  Bugfixes:
    - Fixed that the trade overview showed trades from deleted hex cores. (a bug introduced in 0.4.0)
---------------------------------------------------------------------------------------------------
Version: 1.0.14
Date: 30/6/25
  Bugfixes:
    - Fixed that the combination of mod settings to "unmix" resources and to spawn resources as "single hexes" was causing the hexagonal resources to omit some ore types.
---------------------------------------------------------------------------------------------------
Version: 1.0.13
Date: 30/6/25
  Minor Features:
    - Added search button in the catalog.
  Bugfixes:
    - Fixed that hex core deletion was possible pre-unlock.
    - Fixed that the last free claim you have wasn't free.
    - Fixed that the catalog item selected wasn't being remembered after closing the catalog.
    - Fixed a crash caused by trying to clear the selected item at the Quantum Bazaar.
  Changes:
    - Moved circuit connection point of hex cores.
---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 29/6/25
  Bugfixes:
    - Hotfix for new games starting without coins in your inventory. (preventing being able to play the game at all)
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 29/6/25
  Bugfixes:
    - Fixed that the quest "It Wasn't Good Enough" wasn't able to be completed.
    - Fixed that opening a hex core in editor mode would crash the game.
    - Fixed that the Lazy Looter quest was only able to be completed when you were not in remote view on the dungeon's planet.