@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.16
 Date: 1/7/25
+  Bugfixes:
+    - Fixed crash with mods that modify steel chests.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.15
 Date: 1/7/25
